# pyspark-etl-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
conf/: config.yaml
docs/: airflow_snippet.py  prefect_snippet.py
scripts/: benchmark.py  generate_data.py  run_pipeline.py
src/pipeline/: __init__.py  bronze.py  cli.py  generator.py  gold.py  logging_utils.py  perf.py  quality.py  schemas.py  settings.py  silver.py  spark.py
tests/: conftest.py  test_generator.py  test_gold.py  test_pipeline_e2e.py  test_quality.py  test_settings.py  test_silver.py
